--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="container" id="container">
     <div class="envelope"></div>
     <div class="invitation"></div>
-    <a id="download" href="https://i.imgur.com/EWuHTwy.png" download="convite-izabele-sandro.png">Baixar Convite</a>
+    <a id="download" href="https://i.imgur.com/gYHf1qk.png" download="convite-izabele-sandro.png">Baixar Convite</a>
   </div>
 
   <script>
