--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="container" id="container">
     <div class="envelope"></div>
     <div class="invitation"></div>
-    <a id="download" href="https://i.imgur.com/gYHf1qk.png" download="convite-izabele-sandro.png">Baixar Convite</a>
+    <a id="download" href="https://imgur.com/a/KQHPJcW.png" download="convite-izabele-sandro.png">Baixar Convite</a>
   </div>
 
   <script>
@@ -135,7 +135,7 @@
     downloadButton.addEventListener('click', (e) => {
       e.preventDefault();
       const link = document.createElement('a');
-      link.href = 'https://i.imgur.com/EWuHTwy.png';
+      link.href = 'https://imgur.com/a/KQHPJcW.png';
       link.download = 'convite-izabele-sandro.png';
       document.body.appendChild(link);
       link.click();
