--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       background: white;
       border-radius: 12px;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
-      background-image: url('https://i.imgur.com/EWuHTwy.png');
+      background-image: url('https://imgur.com/a/KQHPJcW.png');
       background-size: cover;
       background-position: center;
       opacity: 0;
